--- a/RAM.html
+++ b/RAM.html
@@ -43,10 +43,10 @@
 
   
   <div class="produto-compra">
-    <div class="preco">R$ 286,99</div>
+    <div class="preco">R$ 309,99</div>
     <small>À vista no PIX com desconto</small>
     <button class="btn">COMPRAR AGORA</button>
-    <button class="btn">ADICIONAR AO CARRINHO</button>
+    <a  href="carrinho.html"><button class="btn">ADICIONAR AO CARRINHO</button></a>
   </div>
 
 </div>
