--- a/produtos.html
+++ b/produtos.html
@@ -42,21 +42,21 @@
       <img src="images/shopping.webp" alt="Produto">
       <h2 class="titulo">1 Cooler Fan Avulso Rise Mode Aura Frost Pro Argb 120mm</h2>
       <p class="preco">R$ 39,99</p>
-      <a href="#"><button>COMPRAR</button></a>
+      <a href="cooler.html"><button>COMPRAR</button></a>
     </div>
     
     <div class="card">
       <img src="images/PC-Gamer-Ludic-By-Bluepc-Amd-Ryzen-7-5700x-Geforce-RTX-3060-12gb-16gb-Ram-SSD-512gb-M-2-Nvme-Watercooler-Fonte-600w-80-Plus-Pgbp-1164lud_1741719042.webp" alt="Produto">
       <h2 class="titulo">PC Gamer Ludic By Bluepc - Amd Ryzen 7 5700x, Geforce RTX 3060 12gb, 16gb Ram, SSD 512gb M.2 Nvme</h2>
       <p class="preco">R$ 4.690,00</p>
-      <a href="#"><button>COMPRAR</button></a>
+      <a href="pcgamer.html"><button>COMPRAR</button></a>
     </div>
     
     <div class="card">
       <img src="images/a-pc-narok-preto-gpu-m-001_71.jpg" alt="Produto">
       <h2 class="titulo">PC Gamer Pichau Lúcifer, AMD Ryzen 5 8600G, 16GB DDR5, SSD 240GB</h2>
       <p class="preco">R$ 3988,99</p>
-      <a href="#"><button>COMPRAR</button></a>
+      <a href="pcgamer2.html"><button>COMPRAR</button></a>
     </div>
 
     <div class="card">
