--- a/HD.html
+++ b/HD.html
@@ -42,10 +42,10 @@
 
   
   <div class="produto-compra">
-    <div class="preco">R$ 487,99</div>
+    <div class="preco">R$ 399,99</div>
     <small>À vista no PIX com desconto</small>
     <button class="btn">COMPRAR AGORA</button>
-    <button class="btn">ADICIONAR AO CARRINHO</button>
+    <a href="carrinho.html"><button class="btn">ADICIONAR AO CARRINHO</button></a>
   </div>
 
 </div>
